feat: added database configuration